--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/UpcomingEventsProjection.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/UpcomingEventsProjection.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
-    var contentItems = Model.ContentItems; // contentItems is a WhereSelectListIterator
+    var contentItems = Model.ContentItems;
+    var cssClass = ".upcoming-events-projection";
     List<dynamic> eventItems = new List<dynamic>();
-    
+
     foreach (dynamic contentItem in contentItems)
-    { 
+    {
         // get the part that is synonomous with the type,
         // so we can access fields.
         dynamic itemPart = contentItem.Event;
@@ -14,14 +15,22 @@
         eventItem.StartDate = itemPart.StartDate.DateTime.ToString(@"MM\/dd");
         eventItem.EndDate = itemPart.EndDate.DateTime.ToString(@"MM\/dd\/yyyy"); ;
         eventItem.InternalLink = Url.ItemDisplayUrl((Orchard.ContentManagement.IContent)contentItem);
-        
+
         // add it to the collection of 'view models'
         eventItems.Add(eventItem);
     }
 }
 
-@foreach (var item in eventItems)
-{
-    <h2><a href="@item.InternalLink">@item.Title</a></h2>
-    <span>@Html.Raw(@item.StartDate)</span><span> - </span><span>@item.EndDate</span>
-}
+<div class="@cssClass">
+
+    <ul class="list-unstyled">
+        @foreach (var item in eventItems)
+        {
+            <li>
+                <h2><a href="@item.InternalLink">@item.Title</a></h2>
+                <span>@Html.Raw(@item.StartDate)</span><span> - </span><span>@item.EndDate</span>
+            </li>
+        }
+    </ul>
+
+</div>
