--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Widget-MenuWidget.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Widget-MenuWidget.cshtml
@@ -1,5 +1,5 @@
-﻿@{    
-    var collapseId = "navbar-collapse-" + DateTime.Now.Ticks;            
+﻿@{
+    var collapseId = "navbar-collapse-" + DateTime.Now.Ticks;
     foreach (var item in Model.Content.Items)
     {
         // todo make this more specific
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="/"><span>@WorkContext.CurrentSite.SiteName</span></a>
     </div>
 
     @Display(Model.Content)
