--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Site/Less/_workitem-carousel.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Site/Less/_workitem-carousel.less
@@ -22,7 +22,7 @@
         left: 0;
         list-style: none;
         margin: 0;
-        text-align: center; 
+        text-align: center;
         top: 0;
         width: @carousel-indicators-width;
 
@@ -59,7 +59,7 @@
 
                 > h3 {
                     color: @green;
-                    font-weight: bolder;
+                    font-weight: bolder; 
                     font-size: 2.1em;
                     line-height: 1.1em;
                     margin: 0;
@@ -79,10 +79,7 @@
                     text-transform: uppercase;
                     font-size: 16px;
                     font-weight: bolder;
-
-                    &::after {
-                        content: " > ";
-                    }
+                    .link-arrow-right(@orange);
                 }
             }
         }
