--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SpotlightProjection.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SpotlightProjection.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Orchard.ContentManagement;
+
+@{
     var contentItems = Model.ContentItems;
     var cssClass = "spotlight-projection";
     dynamic firstItem = System.Linq.Enumerable.First(contentItems);
@@ -13,10 +15,11 @@
     {
         Title = firstItem.TitlePart.Title,
         Body = firstItem.BodyPart.Text,
+        // note: user external links
         Link = new
         {
             Value = spotlightPart.LearnMoreField.Value,
-            Text = spotlightPart.LearnMoreField.Text
+            Text = "Continue Reading" // spotlightPart.LearnMoreField.Text
         },
         Img = new
         {
@@ -27,8 +30,8 @@
 }
 
 <div class="@cssClass">
-    <h2>@viewModel.Title</h2>
-    <img src="@Display.ResizeMediaUrl(Width: 116, Height: 65, Mode: "crop", Alignment: "middlecenter", Path: viewModel.Img.Src)">
+    <h6><a href="@viewModel.Link.Value">@viewModel.Title</a></h6>
+    <img src="@Display.ResizeMediaUrl(Width: 200, Height: 120, Mode: "crop", Alignment: "middlecenter", Path: viewModel.Img.Src)">
     @Html.Raw(viewModel.Body)
     <a href="@viewModel.Link.Value">@viewModel.Link.Text</a>
 </div>
