--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/WorkItemCarousel.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/WorkItemCarousel.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Orchard.ContentManagement;
+
+@{
     var contentItems = Model.ContentItems;
     var carouselUniqueId = DateTime.Now.Ticks; // it's okay to change this to something else unique
     List<dynamic> carouselItems = new List<dynamic>();
@@ -7,26 +9,24 @@
     foreach (var contentItem in contentItems)
     {
         dynamic carouselItem = new System.Dynamic.ExpandoObject();
-        dynamic workItemPart = contentItem.WorkItem;
 
-        // learn more link field
-        carouselItem.LearnMore = new
+        // work item
+        dynamic workItemPart = contentItem.WorkItem;
+        carouselItem.WorkItem = new
         {
-            Text = workItemPart.LearnMoreField.Text,
-            Value = workItemPart.LearnMoreField.Value
+            Summary = workItemPart.Summary.Value,
+            Slug = Url.ItemDisplayUrl((IContent)contentItem)
         };
-        // summary text field
-        carouselItem.SummaryValue = workItemPart.Summary.Value;
-        // work area taxonomy term field
+
+        // work area
         var workArea = workItemPart.Area.Terms[0];
         carouselItem.WorkArea = new
         {
             Term = workArea.Name,
             Slug = workArea.Slug
         };
-        // title part
-        carouselItem.title = contentItem.TitlePart.Title;
-        // media library picker field
+
+        // image
         var mediaPart =
             workItemPart.Image != null &&
             workItemPart.Image.MediaParts != null &&
@@ -65,8 +65,8 @@
                      alt="@item.Img.Alt">
                 <div class="carousel-caption">
                     <h3><a href="@item.WorkArea.Slug">@item.WorkArea.Term</a></h3>
-                    @Html.Raw(item.SummaryValue)
-                    <a href="@item.LearnMore.Value">@item.LearnMore.Text</a>
+                    @Html.Raw(item.WorkItem.Summary)
+                    <a href="@item.WorkItem.Slug">Learn More</a>
                 </div>
             </div>
         }
