Use minified css.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
@@ -35,13 +35,13 @@
     }
     /*switch: layout-main*/
     & {
-        #layout-content {
+        .zone-content {
             .make-md-column(12);
         }
     }
 
     &.aside-12 {
-        #layout-content {
+        .zone-content {
             .make-md-column(6);
         }
 
