--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
@@ -17,8 +17,8 @@
     Script.Include("theme.js").AtFoot();
     Style.Include("//fonts.googleapis.com/css?family=Lobster&subset=latin");
     Style.Require("Bootstrap");
-    Style.Include("site.css");
-    Style.Include("theme.css");
+    Style.Include("site.min.css");
+    Style.Include("theme.min.css");
 
     /* Some useful shortcuts or settings
     ***************************************************************/
