--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.css
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.css
@@ -1764,26 +1764,26 @@ div#layout-navigation.group > div.zone.zone-navigation > article.widget-navigati
     width: 100%;
   }
 }
-#layout-wrapper #layout-content {
+#layout-wrapper .zone-content {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media (min-width: 992px) {
-  #layout-wrapper #layout-content {
+  #layout-wrapper .zone-content {
     float: left;
     width: 100%;
   }
 }
-#layout-wrapper.aside-12 #layout-content {
+#layout-wrapper.aside-12 .zone-content {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media (min-width: 992px) {
-  #layout-wrapper.aside-12 #layout-content {
+  #layout-wrapper.aside-12 .zone-content {
     float: left;
     width: 50%;
   }
