Use #layout-content not .zone-content.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
@@ -35,13 +35,13 @@
     }
     /*switch: layout-main*/
     & {
-        .zone-content {
+        #layout-content {
             .make-md-column(12);
         }
     }
 
     &.aside-12 {
-        .zone-content {
+        #layout-content {
             .make-md-column(6);
         }
 
@@ -52,7 +52,7 @@
 
     &.aside-1,
     &.aside-2 {
-        .zone-content {
+        #layout-content {
             .make-md-column(8);
         }
 
